--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 	<body>
 		<p>Sorry, the page you are looking for does not exist.</p>
 		<p>Here is a duck:</p>
-		<img src="style/img/duck.jpg" alt="Duck" title="Quack."/>
+		<img src="/style/img/duck.jpg" alt="Duck" title="Quack."/>
 		<!--
 			I need to make this page larger than 512 bytes to be shown in Chrome and IE. 
 			So here's another duck:
