add google analytics

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
         <link rel="stylesheet" href="style/site.css" />
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Reenie+Beanie&amp;text=WilFqua" />
         <title>fuqua.io</title>
+        <script>
+            var _gaq = _gaq || [];
+            _gaq.push(['_setAccount', 'UA-38553935-1']);
+            _gaq.push(['_trackPageview']);
+            (function() {
+                var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            })();
+        </script>
     </head>
     <body xmlns:v="http://rdf.data-vocabulary.org/#" typeof="v:Person">
         <h1 property="v:name">Will Fuqua</h1>
