--- a/theme/entry.html
+++ b/theme/entry.html
@@ -20,31 +20,14 @@
             <p>untagged</p>
         {% endif %}
     </div>
-    <div class="comments">
-        {%- if conf.disqus_shortname and env.type == 'entry' and not entry.draft %}
-        <div id="disqus_thread"></div>
-        <script type="text/javascript">
-            var disqus_shortname = '{{ conf.disqus_shortname }}'; // required: replace example with your forum shortname
-
-            // The following are highly recommended additional parameters. Remove the slashes in front to use.
-            var disqus_identifier = "{{ conf.www_root + entry.permalink }}";
-            var disqus_url = "{{ conf.www_root + entry.permalink }}";
-
-            if (window.location.hostname != "localhost") {
-                /* * * DON'T EDIT BELOW THIS LINE * * */
-                (function() {
-                    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                    dsq.src = '{{ env.protocol }}://' + disqus_shortname + '.disqus.com/embed.js';
-                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-                })();
-            }
-        </script>
-        <noscript>
-            <p>Please enable JavaScript to view the <a href="{{ env.protocol }}://disqus.com/?ref_noscript">comments powered by Disqus.</a></p>
-        </noscript>
-        <a href="{{ env.protocol }}://disqus.com" class="dsq-brlink">
-            blog comments powered by <span class="logo-disqus">Disqus</span>
-        </a>
-        {% endif -%}
+    <script src="https://apis.google.com/js/plusone.js">
+    </script>
+    <div id="comments">
+        <div class="g-comments"
+            data-href="{{conf.www_root + entry.permalink}}"
+            data-width="642"
+            data-first_party_property="BLOGGER"
+            data-view_type="FILTERED_POSTMOD">
+        </div>
     </div>
 </article>
