--- a/theme/articles.html
+++ b/theme/articles.html
@@ -1,5 +1,11 @@
 {% block content %}
 
+<div class="util-links">
+    <a href="{{ env.path + '/atom/' }}" rel="alternate">blog feed</a>
+    <a href="https://twitter.com/wafuqua" rel="me">twitter</a>
+    <a href="https://github.com/waf" rel="me">github</a>
+    <a href="http://www.linkedin.com/in/wafuqua" rel="me">linkedin</a>
+</div>
 <div id="entries-search">
     <input class="search-box" type="search" placeholder="Filter&hellip;" />
     <ul class="list">
