--- a/theme/entry.html
+++ b/theme/entry.html
@@ -1,8 +1,8 @@
 <nav>
     <ul>
-        <li><a class="top" href="#" title="Top of page">Ë</a><span class="label">Top&nbsp;of&nbsp;page</span></li>
+        <li><a class="top" href="#" title="Top of page">&#708;</a><span class="label">Top&nbsp;of&nbsp;page</span></li>
         <li><a class="root" href="/blog/" title="Home">/</a><span class="label">Home</span></li>
-        <li><a class="bottom" href="#comments" title="Comments">Ë</a><span class="label">Comments</span></li>
+        <li><a class="bottom" href="#comments" title="Comments">&#709;</a><span class="label">Comments</span></li>
     </ul>
 </nav>
 <article>
