use font-awesome for icons

--- a/theme/base.html
+++ b/theme/base.html
@@ -11,9 +11,10 @@
         {% if 'sitemap' in env.views -%}
         <link href="{{ env.views.sitemap.path }}" type="application/xml" rel="sitemap" title="Sitemap">
         {%- endif%}
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Reenie+Beanie&amp;text=WilFqua" />
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans" />
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Inconsolata" />
+        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Reenie+Beanie&amp;text=WilFqua" />
+        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Droid+Sans" />
+        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Inconsolata" />
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/3.2.1/css/font-awesome.min.css" />
         <link href="{{ env.path + '/atom/' }}" type="application/atom+xml" rel="alternate" title="Atom Feed" />
         <link href="{{ env.path + '/rss/' }}" type="application/rss+xml" rel="alternate" title="RSS Feed" />
         <script>
