add blog, remove linkedin

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <h1 property="name">Will Fuqua</h1>
         <ul class="boxes">
             <li><a property="url" rel="me" href="https://github.com/waf">code</a></li>
+            <li><a property="url" href="/blog/">blog</a></li>
             <li><a property="url" rel="me" href="http://www.twitter.com/wafuqua">contact</a></li>
-            <li><a property="url" rel="me" href="http://www.linkedin.com/in/wafuqua">career</a></li>
         </ul>
     </body>
 </html>
