switch to protocol agnostic link for font
just upgraded fuqua.io to https

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=600, maximum-scale=1.0" />
         <link rel="stylesheet" href="style/site.css" />
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Reenie+Beanie&amp;text=WilFqua" />
+        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Reenie+Beanie&amp;text=WilFqua" />
         <title>fuqua.io</title>
         <script>
             var _gaq = _gaq || [];
