fix atom link and remove linkedin

--- a/theme/articles.html
+++ b/theme/articles.html
@@ -3,8 +3,7 @@
 <div class="util-links">
     <a href="https://twitter.com/wafuqua" rel="me">twitter</a>
     <a href="https://github.com/waf" rel="me">github</a>
-    <a href="http://www.linkedin.com/in/wafuqua" rel="me">linkedin</a>
-    <a href="{{ env.path + '/atom/' }}" rel="alternate">blog feed</a>
+    <a href="{{ env.path + '/atom.xml' }}" rel="alternate">blog feed</a>
 </div>
 <div id="entries-search">
     <input class="search-box" type="search" placeholder="Filter&hellip;" />
